<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:paddingBottom="@dimen/padding_very_small"
              android:paddingTop="@dimen/padding_very_small">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/drawee_avatar"
        android:layout_width="@dimen/header_content_height"
        android:layout_height="@dimen/header_content_height"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_very_small"
        fresco:placeholderImage="@color/item_post_header_avatar_placeholder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_small">

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lorem_2words"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_normal"
            android:text="@string/lorem_2sentences"/>

        <LinearLayout
            android:id="@+id/view_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_normal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_2words"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/post_comments_info_separator"/>

            <TextView
                android:id="@+id/text_counter_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_add_circle_gray_12dp"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/lorem_digit"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>